cmake_minimum_required(VERSION 3.12)
project(tyche)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/artifacts)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/artifacts)
include_directories(tyche/include)
include_directories(svc/include)
add_subdirectory(tyche)
add_subdirectory(svc)
